# UAV-System

./: .gitignore  .gitmodules  CMakeLists.txt  Log.md  README.md  apm.sh  build.sh  check.sh  close_servo.sh  package.xml  pull.sh  push.sh  rs.sh  rs2.sh  terminal.py  terminal2.py  time.sh
design/: Body.ipt  Full.iam  LeftCover.ipt  RightCover.ipt
docs/: demo1.json  demo2.json  full_data.json  full_no_sample.json  plan.json  plan2.json  setting.json
example/: .combine.cpp.swp  CMakeLists.txt  asynccam-test.cpp  comb  combine  combine.cpp  combine.cpp.txt  demo1.cpp  demo2.cpp  info.cpp  manual.cpp  manual_data.cpp  manual_full.cpp  manual_rtl.cpp  manual_send.cpp  manual_vision.cpp  misi.hpp  read_test.cpp  test1  test1.cpp  test2  test_gps.cpp
example/test1/: test1
include/: .copter.hpp.swp  .enum.hpp.swp  GPSnav.hpp  UART.hpp  control.hpp  convert.hpp  copter.hpp  emiro.hpp  enum.hpp  gps.hpp  jsonio.hpp  jsonread.hpp  keyboard.hpp  lidar.hpp  logger.hpp  mat.hpp  notification.hpp  param.hpp  pin.hpp  rangefinder.hpp  servo.hpp  settings.hpp  simplepid.hpp  tcpclient.hpp  tfmini.hpp  types.hpp  uart.hpp  vision.hpp
platform/jetson/: pin.hpp
python/: check.py  time_sync.py
release/: comb  test2
shell/: apm.sh  build.sh  emiro.sh  install.sh  lidar.sh  open_servo.sh  push.sh
shell/child/: ubuntu20.sh
src/: .copter.cc.swp  GPSnav.cc  UART.cc  control.cc  convert.cc  copter.cc  emiro.cc  gps.cc  jsonio.cc  jsonread.cc  lidar.cc  logger.cc  notification.cc  param.cc  pin.cc  rangefinder.cc  servo.cc  simplepid.cc  tcpclient.cc  tfmini.cc  uart.cc
